welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if(nums(i)=9){
              ^arrayCount9:4: error: type mismatch;
 found   : Unit
 required: Int
  for(i<-1 to longueurT-1){
       ^